--- a/src/App.css
+++ b/src/App.css
@@ -89,13 +89,6 @@ main .hire-btn {
   background-color: transparent;
 }
 
-main .down-cv {
-  background-color: black;
-  color: white;
-  border: none;
-}
-
-
 main .about {
   width: 80%;
   height: 300px;
@@ -140,7 +133,7 @@ main .about button {
 
 
 main .services {
-  height: 600px;
+  height: 800px;
   background-color: white;
   padding: 2% 10% 0px 10%;
 }
@@ -189,8 +182,8 @@ main .box-container {
 .box-1,
 .box-2,
 .box-3 {
-  width: 300px;
-  height: 320px;
+  width: 500px;
+  height: 520px;
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 2px 2px 18px rgba(0, 0, 0, 0.3);
@@ -236,15 +229,11 @@ main .box-container {
   padding-top: 15px;
 }
 
-.box-1 button,
-.box-2 button,
-.box-3 button {
-  width: 100px;
-  height: 30px;
-  background-color: white;
-  border: none;
-  outline: none;
-  border-radius: 5px;
+.box-1 img,
+.box-2 img,
+.box-3 img {
+  width: 100%;
+  height: 55%;
 }
 
 
